<resources>
    <string name="app_name">DenuncieAqui!</string>
    <string name="title_activity_maps">Map</string>
    <string name="pick_image_intent_text">Selecione uma foto</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Por favor, autorize o acesso a sua localização, camera e memória.</string>
    <string name="location_permission_denied">Este app precisa de autorização para acessar a sua localização. Caso deseje fazer isso posteriormente, basta ir nas configurações do aplicativo e habilitá-las.</string>
    <string name="permission_required_toast">A permissão da localização, câmera e memória são necessárias para que o app funcione corretamente.</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_proximo">Próximo</string>
    <string name="txt_welcome_main">Bem-vindo(a) ao aplicativo de denúncias do Centro das Mulheres do Cabo! Utilize-o com responsabilidade.</string>
    <string name="txt_sobre">Aplicativo desenvolvido por Gabriele Pessoa, Lisandra Cruz, Marconi Motta e Thiago Sitonio.</string>
    <string name="txt_categoria_main">Qual a categoria da sua denuncia?</string>
    <string name="txt_tipo_main">Qual o tipo da sua denuncia?</string>
    <string name="descricao_logo_cmc">Ícone da ONG Mulheres do Cabo.</string>
    <string name="cat_seguranca">Segurança</string>
    <string name="cat_agua_energia">Água e Energia</string>
    <string name="police_stations_url">http://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="medicare_url">http://data.gov.au/dataset/location-of-medicare-offices/resource/5d38e1be-4011-49c4-8b8b-75405eeb1088</string>

    <string name="URL_ACESSO">http://192.168.0.13:8080/</string>


</resources>
